--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-io.oneclicklabs.logging.enabled=true
-io.oneclicklabs.logging.request.enabled=false
-io.oneclicklabs.logging.response.enabled=true
+logmetrics.logging.enabled=true
+logmetrics.logging.request.enabled=true
+logmetrics.logging.response.enabled=true
