--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 sourceCompatibility = 1.8
 
 repositories {
@@ -29,7 +29,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.4.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.4.0'
-	compile ("io.devxchange:logmetrics:0.0.1")
+	compile ("io.devxchange:logmetrics:0.0.2")
 	compile group: 'org.springframework', name: 'spring-webmvc', version: '4.3.2.RELEASE'
     compile("javax.servlet:javax.servlet-api:3.1.0")
 	compile group: 'commons-io', name: 'commons-io', version: '2.4'
