--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logmetrics.logging.enabled=true
 logmetrics.logging.request.enabled=true
 logmetrics.logging.response.enabled=true
+logmetrics.logging.obfuscate.enabled=true
+logmetrics.logging.obfuscate.md5.fields=name
+logmetrics.logging.obfuscate.sha256.fields=age
+logmetrics.logging.obfuscate.fields=salary
